[gd_scene load_steps=9 format=3 uid="uid://ktrlg2o50i8g"]

[ext_resource type="Script" uid="uid://ngi7fsy5wcy4" path="res://Scripts/email_template.gd" id="1_wegds"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncod0"]
bg_color = Color(0.12941177, 0.16078432, 0.24313726, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jinfa"]
bg_color = Color(0.92156863, 0.9098039, 0.8980392, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0nckt"]
content_margin_left = 20.0
bg_color = Color(0.90534997, 0.55898935, 0.49497223, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0xi0"]
content_margin_left = 20.0
bg_color = Color(0.5575112, 0.24418923, 0.18900546, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqfwx"]
content_margin_left = 20.0
bg_color = Color(0.91764706, 0.9098039, 0.8980392, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1w0cw"]
content_margin_left = 20.0
bg_color = Color(0.8275309, 0.4144279, 0.34451237, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Theme" id="Theme_0nckt"]
Button/colors/font_color = Color(0.078431375, 0.11372549, 0.14509805, 1)
Button/colors/font_focus_color = Color(0.08235294, 0.11764706, 0.14901961, 1)
Button/colors/font_hover_pressed_color = Color(0.9843137, 0.9843137, 0.9843137, 1)
Button/colors/font_pressed_color = Color(0.9843137, 0.9843137, 0.9843137, 1)
Button/styles/hover = SubResource("StyleBoxFlat_0nckt")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_a0xi0")
Button/styles/normal = SubResource("StyleBoxFlat_bqfwx")
Button/styles/pressed = SubResource("StyleBoxFlat_1w0cw")

[node name="Email Template" type="Panel"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -422.5
offset_right = 826.0
offset_bottom = 422.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ncod0")
script = ExtResource("1_wegds")

[node name="Article" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -378.0
offset_top = 80.0
offset_right = 378.0
offset_bottom = 819.5
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jinfa")

[node name="Line2D" type="Line2D" parent="Article"]
position = Vector2(-23, -67.5)
points = PackedVector2Array(46, 155.5, 744, 155.5)
width = 2.0
default_color = Color(0.6156863, 0.5882353, 0.54901963, 1)

[node name="title" type="Button" parent="Article"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.5
offset_right = 749.0
offset_bottom = 61.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 25
toggle_mode = true
text = "Email Title"
alignment = 0
autowrap_mode = 2

[node name="DearStatement" type="Button" parent="Article"]
layout_mode = 0
offset_left = 4.0
offset_top = 112.5
offset_right = 728.0
offset_bottom = 147.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Dear
"
alignment = 0

[node name="body" type="Button" parent="Article"]
layout_mode = 0
offset_left = 8.0
offset_top = 155.5
offset_right = 744.0
offset_bottom = 458.5
theme = SubResource("Theme_0nckt")
theme_override_constants/h_separation = 4
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "
"
alignment = 0

[node name="Label" type="Label" parent="Article/body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -1.0
offset_right = -8.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.12941177, 0.16078432, 0.24313726, 1)
theme_override_font_sizes/font_size = 20
text = "Body"
autowrap_mode = 2

[node name="footer" type="Button" parent="Article"]
layout_mode = 0
offset_left = 2.0
offset_top = 502.5
offset_right = 753.0
offset_bottom = 626.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 15
toggle_mode = true
text = "
"
alignment = 0
autowrap_mode = 2

[node name="Label" type="Label" parent="Article/footer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 2.0
offset_right = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.078431375, 0.10980392, 0.14509805, 1)
theme_override_font_sizes/font_size = 20
text = "Footer"
autowrap_mode = 2

[node name="From" type="Button" parent="Article"]
layout_mode = 0
offset_left = 4.0
offset_top = 646.5
offset_right = 755.0
offset_bottom = 732.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 15
toggle_mode = true
text = "
"
alignment = 0
autowrap_mode = 2

[node name="Label" type="Label" parent="Article/From"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -3.0
offset_right = -16.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.078431375, 0.10980392, 0.14509805, 1)
theme_override_font_sizes/font_size = 20
text = "Kind regards,
Example"
autowrap_mode = 2

[node name="Address" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 18.5
offset_right = 777.0
offset_bottom = 61.5
theme = SubResource("Theme_0nckt")
theme_override_font_sizes/font_size = 15
toggle_mode = true
text = "Sender Address:"
alignment = 0

[node name="Report" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 427.0
offset_top = -27.5
offset_right = 1275.0
offset_bottom = 873.5
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jinfa")

[node name="ReportText" type="RichTextLabel" parent="Report"]
layout_mode = 0
offset_left = 29.0
offset_top = 34.0
offset_right = 816.0
offset_bottom = 867.0
theme_override_colors/default_color = Color(0.101960786, 0.13725491, 0.16470589, 1)
theme_override_font_sizes/normal_font_size = 20
text = "CAREFULL"

[connection signal="toggled" from="Article/title" to="." method="_on_title_toggled"]
[connection signal="toggled" from="Article/DearStatement" to="." method="_on_dear_statement_toggled"]
[connection signal="toggled" from="Article/body" to="." method="_on_body_toggled"]
[connection signal="toggled" from="Article/footer" to="." method="_on_footer_toggled"]
[connection signal="toggled" from="Article/From" to="." method="_on_from_toggled"]
[connection signal="toggled" from="Address" to="." method="_on_address_toggled"]
